# weather-fetcher

./: Cargo.toml
src/: main.rs
