[package]
name = "weather_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # for making HTTP requests
serde = { version = "1.0", features = ["derive"] } # for serializing and deserializing JSON
serde_json = "1.0" # for serializing and deserializing JSON
clap = { version = "4.0", features = ["derive"] } # for parsing command-line arguments
tokio = { version = "1", features = ["full"] } # for async runtime

